# yarp-device-xhand

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/devices/: CMakeLists.txt
src/devices/xHandControlBoard/: CMakeLists.txt  ControlBoardTrajectory.cpp  ControlBoardTrajectory.h  README.md  xHandControlBoard.cpp  xHandControlBoard.h  xHandControlBoard_ParamsParser.cpp  xHandControlBoard_ParamsParser.h  xHandControlBoard_params.md
src/devices/xHandControlBoard/robots-configuration/xhand1/: CMakeCache.txt  xhand.xml  yarprobotinterface.ini
src/devices/xHandControlBoard/robots-configuration/xhand1/hardware/mechanicals/: hand-mec.xml
src/devices/xHandControlBoard/robots-configuration/xhand1/hardware/motorControl/: hand-mc.xml
src/devices/xHandControlBoard/robots-configuration/xhand1/wrappers/motorControl/: hand-mc_wrapper.xml
src/devices/xHandControlBoard/tests/: README.md  conf.ini  xHandControlBoard_test.py
src/devices/xHandControlBoard/tests/logs_y2025_m11_d18/: xHandControlBoardTest_y2025_m11_d18_h17_min53_s41.rrd  xHandControlBoardTest_y2025_m11_d18_h17_min54_s19.rrd
src/devices/xHandControlBoard/tests/python/: device_test.py
src/devices/xHandControlBoard/tests/python/conf/: common.ini  remotecontrolboardremapper.ini
src/tests/xhand-joint-test/: README.md
src/tests/xhand-joint-test/conf/: config.ini
src/tests/xhand-joint-test/include/xhand-joint-test/: module.h  xhand.h
src/tests/xhand-joint-test/src/: main.cpp  module.cpp  xhand.cpp
src/xhand-tests/: 99-xhand.rules  CMakeLists.txt
src/xhand-tests/xhand-control-test/: CMakeLists.txt  plotControlTest.py
src/xhand-tests/xhand-control-test/include/xhand-control-test/: xhand.h
src/xhand-tests/xhand-control-test/src/: main.cpp  xhand.cpp
src/xhand-tests/xhand-joint-test/: CMakeLists.txt  plotTest.py
src/xhand-tests/xhand-joint-test/conf/: config.ini
src/xhand-tests/xhand-joint-test/results/ethercat/: xhand-joint-test-ethercat-control-first.csv  xhand-joint-test-ethercat-read-first.csv
src/xhand-tests/xhand-joint-test/results/usb/: xhand-joint-test-USB-control-first.csv  xhand-joint-test-USB-read-first.csv
src/xhand-tests/xhand-joint-test/src/: module.cpp  module_configure.cpp
src/xhand-tests/xhand-multithread-control-test/: CMakeLists.txt  plotMultithreadControlTest.py
src/xhand-tests/xhand-multithread-control-test/src/: main.cpp  xhand.cpp
src/xhand-tests/xhand-multithread-read-test/: CMakeLists.txt  plotMultithreadReadTest.py
src/xhand-tests/xhand-multithread-read-test/src/: main.cpp  xhand.cpp
src/xhand-tests/xhand-multithread-test/: CMakeLists.txt  README.md  plotMultithreadTest.py
src/xhand-tests/xhand-multithread-test/include/xhand-multithread-test/: xhand.h
src/xhand-tests/xhand-multithread-test/src/: main.cpp  xhand.cpp
src/xhand-tests/xhand-read-control-test/: CMakeLists.txt
src/xhand-tests/xhand-read-control-test/conf/: config.ini
src/xhand-tests/xhand-read-control-test/include/xhand-read-control-test/: module.h
src/xhand-tests/xhand-read-control-test/src/: main.cpp  module.cpp  module_configure.cpp  xhand.cpp
src/xhand-tests/xhand-read-test/: CMakeLists.txt  README.md
src/xhand-tests/xhand-read-test/include/xhand-read-test/: xhand.h
src/xhand-tests/xhand-read-test/src/: main.cpp  xhand.cpp
